# myaiproject

./: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/myaiproject/: __init__.py  __main__.py  ai_driver.py  cli.py  myaiproject.py  prompt_template.py  pyfile_creator.py
src/myaiproject/ai/: ai_config.py  ai_driver.py  ai_service.py  prompt_template.py
src/myaiproject/constants/: const.py
src/myaiproject/flow/: app_flow.py  myaiproject.py
src/myaiproject/output/: output_writer.py  pyfile_creator.py
tests/: __init__.py  test_myaiproject.py
